fix footer overlap

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,7 +12,7 @@ footer {
     font-size: 1.1rem;
     padding: 1em 5vw;
     position: absolute;
-    bottom: 0;
+    bottom: -4em;
     width: 100%;
 }
   
@@ -48,6 +48,7 @@ footer strong {
     footer {
         flex-direction: row;
         justify-content: space-between;
+        bottom: 0;
     }
 }
   
