--- a/src/pages/GiftIdeas.css
+++ b/src/pages/GiftIdeas.css
@@ -24,7 +24,6 @@
 .column img {
     width: 100%;
     margin-bottom: 1em;
-    padding: 2em;
 }
 
 .idea-text {
